makes website responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="nav-bar container flex">
         <div class="nav flex">
             <img src="./images/MicrosoftLogo.png" alt="Microsoft-logo" width="110px">
-            <div class="links flex">
+            <div class="nav-links flex">
                 <a href="#" class="">Microsoft 365</a>
                 <a href="#">Office</a>
                 <a href="#">Windows</a>
