creates the business section and the footer section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         <div class="showcase-content">
             <h2>Designed for life today—and tomorrow</h2>
             <p>The next-generation of games. Your goals. Friends and family. Windows 11 was made to bring you closer to everything you love</p>
-            <button class="btn"><a href="#">See if your PC is ready <i class="fa-solid fa-chevron-right"></i></a></button>
+            <button class="btn">
+                <a href="#">See if your PC is ready</a>
+                <i class="fa-solid fa-chevron-right"></i>
+            </button>
         </div>
     </section>
 
@@ -39,26 +42,130 @@
             <img src="./images/microsoft365.webp" alt="">
             <h3>Microsoft 365</h3>
             <p>Premium Office apps, extra cloud storage, advanced security, and more—all in one convenient subscription.</p>
-            <a href="#">For up to 6 people <i class="fa-solid fa-chevron-right"></i></a>
+            <a href="#">For up to 6 people</a>
+            <i class="fa-solid fa-chevron-right"></i>
         </div>
         <div class="card">
             <img src="./images/microsoft-edge.webp" alt="">
             <h3>Microsoft Edge</h3>
             <p>World-class performance with more privacy, more productivity, and more value while you browse.</p>
-            <a href="#">Download Now <i class="fa-solid fa-chevron-right"></i></a>
+            <a href="#">Download Now</i></a><i class="fa-solid fa-chevron-right"></i>
         </div>
         <div class="card">
             <img src="./images/micrisoft-OneDrive.webp" alt="">
             <h3>Microsoft OneDrive</h3>
             <p>Save your files and photos to OneDrive and access them from any device, anywhere..</p>
-            <a href="#">Learn more <i class="fa-solid fa-chevron-right"></i></a>
+            <a href="#">Learn more</a><i class="fa-solid fa-chevron-right"></i>
         </div>
         <div class="card">
             <img src="./images/OneNote.webp" alt="">
             <h3>OneNote</h3>
             <p></p>Organize your notes and your life.</p>
-            <a href="#">Learn more <i class="fa-solid fa-chevron-right"></i></a>
+            <a href="#">Learn more</a><i class="fa-solid fa-chevron-right"></i>
         </div>
     </section>
+
+    <section class="container outlook flex">
+        <div class="outlook-content">
+            <h2>Outlook for iOS and Android</h2>
+            <p>Connect. Organize. Get things done.</p>
+            <button class="btn">
+                <a href="#">Download now </a>
+                <i class="fa-solid fa-chevron-right"></i>
+            </button>
+        </div>
+    </section>
+
+    <h2 class="business container">For business</h2>
+
+    <section class="microsoft-tools grid container">
+        <div class="card">
+            <img src="./images/microsoftTeams.webp" alt="">
+            <h3>Get Microsoft Teams For Free</h3>
+            <p>Online meetings, chat, and shared cloud storage—all in one place.</p>
+            <a href="#">Sign up for free</a>
+            <i class="fa-solid fa-chevron-right"></i>
+        </div>
+        <div class="card">
+            <img src="./images/microsoft365-business.webp" alt="">
+            <h3>Microsoft 365 for business</h3>
+            <p>Stay a step ahead with powerful apps for productivity, connection, and security.</p>
+            <a href="#">Shop Now</i></a><i class="fa-solid fa-chevron-right"></i>
+        </div>
+        <div class="card">
+            <img src="./images/MicrosoftViva.webp" alt="">
+            <h3>Microsoft Viva</h3>
+            <p>Discover the new employee experience platform designed to help people connect, focus, learn, and thrive at work.</p>
+            <a href="#">Learn more</a><i class="fa-solid fa-chevron-right"></i>
+        </div>
+        <div class="card">
+            <img src="./images/MicrosoftCloud.webp" alt="">
+            <h3>Welcome to your Windows 365 Cloud PC</h3>
+            <p></p>Securely stream your Windows experience from the Microsoft cloud to any device.</p>
+            <a href="#">Learn more</a><i class="fa-solid fa-chevron-right"></i>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container grid">
+            <div class="footer-links">
+                <h3>Microsoft Store</h3>
+                <ul>
+                    <li><a href="#">Account profile</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">Order Tracking</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h3>Education</h3>
+                <ul>
+                    <li><a href="#">Microsoft in education</a></li>
+                    <li><a href="#">Devices for education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h3>Business</h3>
+                <ul>
+                    <li><a href="#">Microsoft in education</a></li>
+                    <li><a href="#">Devices for education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h3>Developer & IT</h3>
+                <ul>
+                    <li><a href="#">Microsoft in education</a></li>
+                    <li><a href="#">Devices for education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                    <li><a href="#">Microsoft Teams for Education</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h3>Company</h3>
+                <ul>
+                    <li><a href="#">Carees</a></li>
+                    <li><a href="#">About Microsoft</a></li>
+                    <li><a href="#">Company news</a></li>
+                    <li><a href="#">Investors</a></li>
+                    <li><a href="#">Sustainability</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
